crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: crawler
  name: crawler-service
spec:
  selector:
    app: synergychat-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
